fix : sonarlint 수정 및 작가 수정 변경